== Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== Unreleased

=== added

=== changed

=== fixed

== 2.0.0-rc17 - 2021-09-22

=== changed

2021-09-22::
* streamingExecute (exportPPT, exportEA) now emits a note instead ot an error when running on linux
* brushed up powershell wrapper

== 2.0.0-rc16 - 2021-09-21

=== added

2021-09-21::
* added lunrjs as local search engine

=== fixed

2021-09-21::
* updated exportContributors to follow moved files
* fixed downloadTemplate

== 2.0.0-rc15 - 2021-09-18

=== added

2021-09-06::
* added warning when running on WSL
* added dtcw.bat to avoid execution restrictions
* updated developer docs
* added docsy as theme

=== fixed

2021-09-18::
* fixed favicons
* fixed blog

== 2.0.0-rc14 - 2021-05-22

=== added
2021-05-21::
* if the outputPath from the config starts with a '/', it will be considered as absolute path. +
This way, you can move the build fodler outside of your repository. +
`outputPath = System.getenv('HOME')+'/.doctoolchain/build/'+(new File('.')).canonicalPath.md5()`
* repository theme gets only copied to build if it is defined in `siteFolder`
* generateSite will now add meta-data to all asciidoc files which have no meta-data defined. The menu name and order will be created corresponding to the folder and file name. The title will be extracted as first headline from the file itself.
2021-05-18::
* Headless mode for themes
* fix landing page (only gets copied once when microsite config isn't set yet.)

=== changed

=== fixed

2021-05-22::
* fix copyThemes to also copy the external theme
2021-05-06::
* fix #574: publishToConfluence: Problem with wrong ancestorId
2021-04-28::
* fix copyImages for generateSite

== 1.4.0 - 2021-05-21

=== Added

2021-05-21::
* removed jCenter references

2021-03-21::
